fix: more spacing between image and text
thanks 4 the suggestion @sanclemente

--- a/src/app/(with-footer)/(home)/_sections/AboutSection/AboutSection.module.css
+++ b/src/app/(with-footer)/(home)/_sections/AboutSection/AboutSection.module.css
@@ -75,6 +75,7 @@
 	display: flex;
 	justify-content: center;
 	width: 100%;
+	padding-bottom: 25px;
 }
 
 .photo {
